Added where you can put your own subreddit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p>
+        Enter a subreddit name without the /r (Example: awww) <br>
+        <label for="text"> </label>
+        <input type ="text" id = "subreddit">
+    </p>
+    <p>
+        <button onclick="onClick()"> Let's see it! </button>
+    </p>
     
 <div id="display"></div>
     <script src="script.js"></script>
