--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>
-        Enter a subreddit name without the /r (Example: awww) <br>
+        Enter a subreddit name without the /r (Example: aww) <br>
         <label for="text"> </label>
         <input type ="text" id = "subreddit">
     </p>
